{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 22,
  "lineage": "9aeb2457-b872-d51f-0857-f7a27f4e0b89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad253013fad0a42a",
            "arn": "arn:aws:ec2:us-east-1:093807443918:instance/i-0990c754fb656afc3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0990c754fb656afc3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "web1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c15421688f74509",
            "private_dns": "ip-172-31-25-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.166",
            "public_dns": "ec2-54-81-9-99.compute-1.amazonaws.com",
            "public_ip": "54.81.9.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:093807443918:key/3d5c309a-8ea1-4a14-b4a4-65145e669569",
                "tags": {
                  "BackupSchedule": "daily",
                  "BusinessUnit": "Digital Products",
                  "CostCenter": "CC-4521",
                  "CreatedDate": "2025-08-03",
                  "DataClassification": "internal",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Name": "customer-portal-dev-root-volume",
                  "Owner": "devops-team@company.com",
                  "PatchGroup": "dev-linux",
                  "Project": "customer-portal",
                  "TerraformWorkspace": "default"
                },
                "tags_all": {
                  "BackupSchedule": "daily",
                  "BusinessUnit": "Digital Products",
                  "Cloud": "AWS",
                  "CostCenter": "CC-4521",
                  "CreatedDate": "2025-08-03",
                  "DataClassification": "internal",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Name": "customer-portal-dev-root-volume",
                  "Owner": "devops-team@company.com",
                  "PatchGroup": "dev-linux",
                  "Project": "customer-portal",
                  "Source": "interview-demo",
                  "TerraformManaged": "true",
                  "TerraformWorkspace": "default"
                },
                "throughput": 125,
                "volume_id": "vol-0286a3dcddfca642b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "customer-portal-dev-20250730172856790400000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-530b3d0a",
            "tags": {
              "BackupSchedule": "daily",
              "BusinessUnit": "Digital Products",
              "CostCenter": "CC-4521",
              "CreatedDate": "2025-08-03",
              "DataClassification": "internal",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "customer-portal-dev-instance",
              "Owner": "devops-team@company.com",
              "PatchGroup": "dev-linux",
              "Project": "customer-portal",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BackupSchedule": "daily",
              "BusinessUnit": "Digital Products",
              "Cloud": "AWS",
              "CostCenter": "CC-4521",
              "CreatedDate": "2025-08-03",
              "DataClassification": "internal",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "customer-portal-dev-instance",
              "Owner": "devops-team@company.com",
              "PatchGroup": "dev-linux",
              "Project": "customer-portal",
              "Source": "interview-demo",
              "TerraformManaged": "true",
              "TerraformWorkspace": "default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae60444e592fc147"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo_instance",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093807443918:security-group/sg-0ae60444e592fc147",
            "description": "Security group for demo EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae60444e592fc147",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "18.232.65.104/29"
                ],
                "description": "SSH from EC2 Instance Connect",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "customer-portal-dev-20250730172856790400000001",
            "name_prefix": "customer-portal-dev-",
            "owner_id": "093807443918",
            "revoke_rules_on_delete": false,
            "tags": {
              "BackupSchedule": "daily",
              "BusinessUnit": "Digital Products",
              "CostCenter": "CC-4521",
              "CreatedDate": "2025-08-03",
              "DataClassification": "internal",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "customer-portal-dev-sg",
              "Owner": "devops-team@company.com",
              "PatchGroup": "dev-linux",
              "Project": "customer-portal",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BackupSchedule": "daily",
              "BusinessUnit": "Digital Products",
              "Cloud": "AWS",
              "CostCenter": "CC-4521",
              "CreatedDate": "2025-08-03",
              "DataClassification": "internal",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "customer-portal-dev-sg",
              "Owner": "devops-team@company.com",
              "PatchGroup": "dev-linux",
              "Project": "customer-portal",
              "Source": "interview-demo",
              "TerraformManaged": "true",
              "TerraformWorkspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-f316c497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/networkInterfaces/customer-portal-dev-nic",
            "internal_domain_name_suffix": "enqcamfhogae5mbciipcgqumod.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/virtualNetworks/customer-portal-dev-vnet/subnets/customer-portal-dev-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "customer-portal-dev-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "customer-portal-dev-rg",
            "tags": {
              "BackupSchedule": "daily",
              "BusinessUnit": "Digital Products",
              "Cloud": "Azure",
              "CostCenter": "CC-4521",
              "CreatedDate": "2025-08-03",
              "DataClassification": "internal",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "devops-team@company.com",
              "PatchGroup": "dev-linux",
              "Project": "customer-portal",
              "TerraformWorkspace": "default"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/networkInterfaces/customer-portal-dev-nic|/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/networkSecurityGroups/customer-portal-dev-nsg",
            "network_interface_id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/networkInterfaces/customer-portal-dev-nic",
            "network_security_group_id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/networkSecurityGroups/customer-portal-dev-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.demo",
            "azurerm_network_security_group.demo",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/networkSecurityGroups/customer-portal-dev-nsg",
            "location": "eastus",
            "name": "customer-portal-dev-nsg",
            "resource_group_name": "customer-portal-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/8",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "BackupSchedule": "daily",
              "BusinessUnit": "Digital Products",
              "Cloud": "Azure",
              "CostCenter": "CC-4521",
              "CreatedDate": "2025-08-03",
              "DataClassification": "internal",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "devops-team@company.com",
              "PatchGroup": "dev-linux",
              "Project": "customer-portal",
              "TerraformWorkspace": "default"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/virtualNetworks/customer-portal-dev-vnet/subnets/customer-portal-dev-subnet",
            "name": "customer-portal-dev-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "customer-portal-dev-rg",
            "virtual_network_name": "customer-portal-dev-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "30206023-71a7-4f80-b022-421e23428c73",
            "id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/virtualNetworks/customer-portal-dev-vnet",
            "location": "eastus",
            "name": "customer-portal-dev-vnet",
            "resource_group_name": "customer-portal-dev-rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/2b0fa787-3cda-432f-847d-5683483e53bb/resourceGroups/customer-portal-dev-rg/providers/Microsoft.Network/virtualNetworks/customer-portal-dev-vnet/subnets/customer-portal-dev-subnet",
                "name": "customer-portal-dev-subnet"
              }
            ],
            "tags": {
              "BackupSchedule": "daily",
              "BusinessUnit": "Digital Products",
              "Cloud": "Azure",
              "CostCenter": "CC-4521",
              "CreatedDate": "2025-08-03",
              "DataClassification": "internal",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "devops-team@company.com",
              "PatchGroup": "dev-linux",
              "Project": "customer-portal",
              "TerraformWorkspace": "default"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    }
  ]
}